# AVCLAN-Mockingboard

./: .clang-format  .clang-tidy  .gitignore  AVCLanDriver.c  AVCLanDriver.h  CMakeLists.txt  CMakePresets.json  GlobalDef.c  GlobalDef.h  LICENSE  Makefile  README.md  ToyotaAuxEnabler.c  ToyotaAuxEnabler.elf  ToyotaAuxEnabler.hex  USART.c  USART.h  avclandrv.c  avclandrv.h  capture.md  com232.c  com232.h  log.1.txt  log.txt  screenlog.0  sniffer.c  timing,16MHz,1000-err0.csv  timing,16MHz,1000.csv  timing,16MHz,1000.xlsx  timing,16MHz,2000.csv  timing,2MHz,2000.csv  timing.csv
.devcontainer/: devcontainer.json
cmake/: avr-gcc-toolchain.cmake  libc-version-test.cpp
hardware/: CUI_DEVICES_SJ-43514.step  CUI_SJ-43514.kicad_mod  LICENSE  LOGO.kicad_mod  OSHW_logo_5mm.emp  SJ-43514.lib  _autosave-avclan-mockingboard.kicad_sch  avclan-mockingboard-rounded.kicad_pcb  avclan-mockingboard-rounded.kicad_prl  avclan-mockingboard-rounded.kicad_pro  avclan-mockingboard.kicad_pcb  avclan-mockingboard.kicad_prl  avclan-mockingboard.kicad_pro  avclan-mockingboard.kicad_sch  fp-lib-table  local.kicad_sym  sym-lib-table
hardware/harness/: harness.bom.tsv  harness.html  harness.yml
hardware/jlcpcb/gerber/: avclan-mockingboard-rounded-CuBottom.gbr  avclan-mockingboard-rounded-CuIn1.gbr  avclan-mockingboard-rounded-CuIn2.gbr  avclan-mockingboard-rounded-CuTop.gbr  avclan-mockingboard-rounded-EdgeCuts.gbr  avclan-mockingboard-rounded-MaskBottom.gbr  avclan-mockingboard-rounded-MaskTop.gbr  avclan-mockingboard-rounded-NPTH.drl  avclan-mockingboard-rounded-PTH.drl  avclan-mockingboard-rounded-PasteBottom.gbr  avclan-mockingboard-rounded-PasteTop.gbr  avclan-mockingboard-rounded-SilkBottom.gbr  avclan-mockingboard-rounded-SilkTop.gbr  avclan-mockingboard-rounded-VScore.gbr
hardware/jlcpcb/production_files/: BOM-avclan-mockingboard-rounded.csv  CPL-avclan-mockingboard-rounded.csv
scripts/: install-toolchain.sh
scripts/packet-analysis/: Manifest.toml  Project.toml  README.md  avclan_plugin.lua
scripts/packet-analysis/dev/PcapTools/: LICENSE  Project.toml  README.md
scripts/packet-analysis/dev/PcapTools/src/: PcapTools.jl  buffer_reader.jl  pcap_header.jl  record.jl  record_header.jl  splitcap.jl  stream_reader.jl  stream_writer.jl
scripts/packet-analysis/msgdumps/: CQ-TS7471LC_bootup.pcap  amp-settings.pcapng  avclan.pcap  cd-insertion-functions-eject.pcapng  initial-bus-scan.pcap  lan-test-bus-scan.pcap  startup.pcapng  tape-insertion-functions-eject.pcapng
scripts/packet-analysis/src/: AVCLANPipe.jl  convert-sr-annotation-export.jl  pipepackets.jl
src/: avclandrv.c  avclandrv.h  com232.c  com232.h  log.0  read_bits.c  send-test.c  sniffer.c  timing.h
